# ssec-cli

./: Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: test.yml
src/: chaff.rs  cli.rs  dec.rs  enc.rs  file.rs  io.rs  lib.rs  main.rs  password.rs  tests.rs
