[package]
name = "ssec-cli"
version = "0.5.2"
edition = "2024"
description = "command-line interface for reading and writing the SSEC file format"
categories = [ "command-line-utilities", "security" ]
authors = [ "James Connolly <me@j-conn.com>" ]
license = "GPL-3.0-or-later"
repository = "https://github.com/james-conn/ssec-cli"
default-run = "ssec"

include = [
	"/Cargo.toml",
	"/Cargo.lock",
	"/build.rs",
	"/src/*.rs",
	"/src/bin/ssec.rs",
	"LICENSE"
]

[[bin]]
name = "ssec"
path = "src/bin/ssec.rs"

[dependencies.clap]
version = "4.5"
features = [ "derive" ]

[dependencies.tokio]
version = "1"
features = [ "rt-multi-thread", "macros", "fs", "io-util" ]

[dependencies.tokio-util]
version = "0.7"
features = [ "io" ]

[dependencies.rand]
version = "0.10"
default-features = false
features = [ "sys_rng", "std_rng" ]

[dependencies.reqwest]
version = "0.13"
default-features = false
features = [ "rustls", "stream" ]

[dependencies.indicatif]
version = "0.18"
features = [ "tokio" ]

[dependencies]
ssec-core = "0.8"
futures-util = "0.3"
zeroize = "1.8"
rpassword = "7.4"
url = "2.5"
tempfile = "3"
bytes = "1"
regex = "1"

[build-dependencies.clap]
version = "4.5"
features = [ "derive" ]

[build-dependencies]
clap_complete = "4.5"
url = "2.5"

[dev-dependencies]
wiremock = "0.6"

[profile.test]
opt-level = 1
